@@ -22,3 +22,4 @@ from elasticapm.conf import setup_logging  # noqa: F401
 from elasticapm.instrumentation.control import instrument, uninstrument  # noqa: F401
 from elasticapm.traces import capture_span, set_context, set_custom_context  # noqa: F401
 from elasticapm.traces import set_transaction_name, set_user_context, tag  # noqa: F401
+from elasticapm.traces import set_transaction_result  # noqa: F401
